--- a/app/app/src/main/res/layout/homepage.xml
+++ b/app/app/src/main/res/layout/homepage.xml
@@ -64,7 +64,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your Checked-In Events"
+        android:text="Browse Events"
         android:textColor="@color/White"
         android:paddingStart="16dp"
         android:textStyle="bold"
