--- a/app/app/src/main/res/layout/notification.xml
+++ b/app/app/src/main/res/layout/notification.xml
@@ -20,10 +20,10 @@
 
         <ImageButton
             android:id="@+id/backArrow"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/baseline_arrow_back"
-            android:background="?attr/selectableItemBackgroundBorderless" />
+            android:layout_width="35dp"
+            android:layout_height="44dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/baseline_arrow_back" />
 
         <TextView
             android:layout_width="wrap_content"
