--- a/app/app/src/main/res/layout/activity_view_event.xml
+++ b/app/app/src/main/res/layout/activity_view_event.xml
@@ -201,10 +201,10 @@
             android:id="@+id/signInButtonArea">
 
             <Button
-                android:id="@+id/signInButton"
+                android:id="@+id/signUpButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/sign_in"
+                android:text="SIGN UP"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:ignore="MissingConstraints" />
