--- a/app/app/src/main/res/layout/activity_view_event.xml
+++ b/app/app/src/main/res/layout/activity_view_event.xml
@@ -155,6 +155,7 @@
                 android:contentDescription="@string/share_qr_code"/>
         </LinearLayout>
         <TextView
+            android:id="@+id/promoQRCodeTitle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Promo QR Code"
