--- a/app/app/src/main/res/layout/activity_create_event.xml
+++ b/app/app/src/main/res/layout/activity_create_event.xml
@@ -10,6 +10,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id = "@+id/button_go_back"
+        android:src="@drawable/baseline_arrow_back"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        />
+
     <TextView
         android:id="@+id/createEventTitle"
         android:layout_width="match_parent"
